# LexRAG

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  SKILL.md  SKILLS.md  config.yaml  pyproject.toml
.github/workflows/: eval_gate.yml  lint.yml
data/: .gitignore
docs/: ablation.md  architecture.md  decisions.md  package_sdk.md  qa_schema.md
eval/: run_eval.py
infra/: docker-compose.dev.yml  docker-compose.yml  modal_deploy.py
lexrag/audit/: __init__.py  chunk_audit_validator.py
lexrag/citation/: __init__.py  citation_confidence_scorer.py  citation_id_sequence.py  citation_reference_parser.py  citation_resolver.py
lexrag/config/: __init__.py  config.py  config_loader.py  package_settings.py
lexrag/context_builder/: __init__.py  context_conflict_detector.py  context_prompt_formatter.py  context_window_compressor.py  context_window_deduplicator.py  context_window_orderer.py  llm_context_builder.py
lexrag/eval/: __init__.py  cli.py  eval_cli_config.py  eval_dataset_repository.py  eval_indexer.py  eval_result_writer.py  eval_runner_application.py  eval_score_config.py  eval_store_factory.py  indexed_corpus.py  offline_eval_store_factory.py  retrieval_eval_runner.py  retrieval_evaluator.py  retrieval_mode.py  stack_eval_store_factory.py
lexrag/indexing/: __init__.py  (+5 more)
progress/: progress.md  review.md  tickets.md
scripts/: 01_download_arxiv_corpus.py  02_build_arxiv_eval_dataset.py  03_run_eval.py  03_run_eval_offline.py  04_run_eval_stack.py  benchmark_chunking.py  download_corpus.sh  seed_eval.py
tests/: conftest.py
(+369 files in other folders)
